got notes displaying and refactored code to clean it up

--- a/partials/newNote.html
+++ b/partials/newNote.html
@@ -1,5 +1,6 @@
 <div>
    Enter a note:
     <textarea ng-model="newNote.note"></textarea>
-    <button ng-click="addNewNote()">{{btnText}}</button>
+    <button ng-click="addNewNote()">Submit</button>
+    <a ng-href="#!/readNotes"><button>Read Your Notes Man</button></a>
 </div>
